# Bachelor-Thesis

./: .env.default  .gitignore  README.md  graph.tex  pyproject.toml  requirements.txt
25fs_i4ds25/: template-1-de.html  template-1.html  template-2-de.html  template-2.html
Eval/Holo/: fix_holo_mapping.py  holo_file_mapping_complete.csv  holo_file_mapping_corrected.csv
Eval/TestEvaluation/: mesh_eval_results.csv
Hunyuan3D-2/: fast_shape_gen_pollen_orthogonal.py  fast_shape_gen_pollen_orthogonal_10steps.py  fast_shape_gen_pollen_orthogonal_50steps.py  fast_shape_gen_pollen_orthogonal_5steps.py  fast_shape_gen_pollen_orthogonal_octree128.py  fast_shape_gen_pollen_orthogonal_octree32.py  main.py  pyproject.toml
Hunyuan3D-2/examples/: fast_shape_gen_multiview.py  fast_shape_gen_pollen_orthogonal.py  pollen_trainer.py
Pixel2MeshPlusPlus/: LICENSE  README.md  cd_distance.py  demo.py  dockerfile  f_score.py  gen_meshes.py  generate_mvp2m_intermediate.py  inference.py  test_mvp2m.py  test_p2mpp.py  train_mvp2m.py  train_p2mpp.py
Pixel_Nerf/: README.md
Pixel_Nerf/train/: train.py  (+2 more)
TestEvaluationPipeline/: mesh_utils.py  visualisation.ipynb
Vanilla_Nerf/: MeshExtraction.ipynb  Nerf.ipynb  model.py  model_nerf_21602
configs/: train.yaml
core/: metrics.py  predict.py  train.py  train_cv.py
data/: __init__.py  datamodule.py  datamodule_cv.py  download_data.py  pollen_dataset.py  utils.py
docker/: Dockerfile
evaluation_pipeline/: debug_timestamps.py  runner.py  runner_holo.py  visualisation.ipynb
gen_images/: generate_images.py  holo_dataset.py  poleno_selection.json
notebooks/: animated_mesh_comparison.ipynb  aug_exploration.ipynb  augmentation_explorer.ipynb  clean_visualizer_fix.py  dataset.py  datastructures_plot.ipynb  exp_1_fine_tuning.ipynb  exp_2_data_augmentation.ipynb  exp_3_zero_shot_hunyuan.ipynb  exp_4_zero_shot_holo.ipynb  exp_5_number_of_views.ipynb  exp_6_pixel2mesh_priors.ipynb  holo_exploration copy.ipynb  holo_explorer.py  mesh_prep_exploration.ipynb  pixelnerf_hyperparametertuning.ipynb  plots_for_paper.ipynb  prior_generation.ipynb  test_visualization.py  visual_hull_baseline.ipynb
scripts/: Singularity.def  run_train.slurm  submit_optuna_sweep.sh  submit_train.sh  sync.sh  sync_checkpoints.sh  train_splatter_image.sbatch
(+292 files in other folders)
